[project]
name = "freight-logistics-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=37.3.0",
    "geopy>=2.4.1",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "plotly>=6.1.1",
    "polars>=1.30.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyodbc>=5.2.0",
]
